# SQLiteORM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SQLiteHelper.hpp  TODO.md
src/: SQLiteHelper.hpp  SQLiteWrapper.hpp  TypeSQlite.hpp
src/SQLiteStruct/: AggregateFunctions.hpp  Column.hpp  ColumnConstraints.hpp  Condition.hpp  ConflictCause.hpp  DataSource.h  DataType.hpp  Database.h  Database.hpp  Expr.hpp  Index.hpp  Order.hpp  QueryAble.hpp  Table.hpp  TableConstraint.hpp
src/SQLiteStruct/Column/: Column.hpp  ColumnConstraints.hpp  ConflictCause.hpp
src/SQLiteStruct/Expressions/: AggregateFunctions.hpp  DateTimeFunctions.hpp  Expressions.hpp  MathFunctions.hpp  ScalarFunctions.hpp  WindowFunctions.hpp
src/SQLiteStruct/Query/: DataSource.hpp  Index.hpp  SelectAble.hpp  Table.hpp  TableConstraint.hpp
src/TemplateHelper/: FixedString.hpp  FixedType.hpp  TypeGroup.hpp
tests/: AggregateFunctionsTest.hpp  BatchInsertTest.hpp  ColumnConstraintsTest.hpp  Common.hpp  DateTimeFunctionsTest.hpp  DeleteTest.hpp  DistinctTest.hpp  ExprTest.hpp  IndexTest.hpp  InsertTest.hpp  JoinTest.hpp  LimitOffsetTest.hpp  MathFunctionsTest.hpp  ScalarFunctionsTest.hpp  SelectTest.hpp  SubQuery.hpp  TableConstraintTest.hpp  TableOptionTest.hpp  TransationTest.hpp  UpdateTest.hpp  UpsertTest.hpp  WindowFunctionTest.hpp  test.cpp
